@@ -1,3 +1,8 @@
+2000-08-02  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix problem,
+	handling method of whitespace between encoded words.
+
 2000-08-02  Yuuichi Teranishi  <teranisi@quickhack.net>
 
 	* emacs/mhc-cmail.el (toplevel): Require 'mime-edit and 'eword-decode.
